# event-sourcing

./: README.md  docker-compose.yaml  main.py  pyproject.toml
account/: account_saves.py
app/: main.py  pooling.py
app/data_validation/: model.py
app/database/: model.py
app/operations/: operations.py
app/utils/: config.py
data_model/: model.py
postgres/: init.sql
store/: events.py
