[tool.poetry]
name = "event-sourcing"
version = "0.1.0"
description = "Event Sourcing example"
authors = ["João Lucas Flauzino Cassiano <joaolucas.apoio@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.37.1"
fastapi = {extras = ["standard"], version = "^0.112.0"}
uvicorn = "^0.30.5"
sqlalchemy = "^2.0.32"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
